--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -207,9 +207,9 @@
 
                     <div class="col-md-6 col-lg-3">
                         <div class="secondary-image-card">
-                            <img src="data:image/png;base64,{{ negative_mask_image }}" alt="Áreas Removidas">
+                            <img src="data:image/png;base64,{{ negative_mask_image }}" alt="Áreas Importantes">
                             <div class="p-3 text-center">
-                                <h5>Áreas "Importantes"</h5>
+                                <h5>Áreas Importantes</h5>
                             </div>
                         </div>
                     </div>
@@ -222,9 +222,7 @@
     <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
             <p class="mb-0">
-                © 2023 GreenRemover PRO - 
-                <a href="#" class="text-white text-decoration-none">Termos de Uso</a> | 
-                <a href="#" class="text-white text-decoration-none">Política de Privacidade</a>
+                © 2025 D'Agua Vision 
             </p>
         </div>
     </footer>
@@ -236,7 +234,6 @@
         const form = document.getElementById('uploadForm');
         const processingOverlay = document.querySelector('.processing-overlay');
 
-        // Drag and Drop
         const preventDefaults = (e) => {
             e.preventDefault();
             e.stopPropagation();
